--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/bulma": "^1.3.0",
+    "@nuxtjs/toast": "^3.3.1",
     "nuxt": "^2.14.0",
+    "vue-spinner": "^1.0.4",
+    "vue2-transitions": "^0.3.0",
     "vuex-persist": "^3.1.0"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@nuxt/types": "^2.14.5",
     "@nuxtjs/dotenv": "^1.4.1",
     "@vue/test-utils": "^1.0.3",
@@ -24,6 +30,7 @@
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
     "node-sass": "^4.14.1",
+    "nuxt-fontawesome": "^0.4.0",
     "sass-loader": "^10.0.2",
     "vue-jest": "^3.0.4"
   }
