--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/bulma": "^1.3.0",
     "@nuxtjs/toast": "^3.3.1",
+    "buefy": "^0.9.3",
     "nuxt": "^2.14.0",
+    "nuxt-buefy": "^0.4.3",
     "vue-spinner": "^1.0.4",
     "vue2-transitions": "^0.3.0",
     "vuex-persist": "^3.1.0"
